lab-css-instagram-clone

--- a/index.html
+++ b/index.html
@@ -1,16 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+<head>
+  <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
+</head>
+
+
+<body>
+
+<div id = "blue-background">
+  hey
+</div>
+
+
+<div id = "all">
+
+
+  <div id = "column1-photos">
+    <img src = "images/phones.png" alt = "Phones Image">
+  </div>
+
+
+<div id = "column2-white">
+    <div class= header>
+      <img src = "images/brand.png" alt = "Instagram Logo">
+              <button id = button>
+                  <img id = "home-image" src = "images/home.png" alt= "Home Icon">
+                  Log in
+              </button>
+      </div>
+
+  <div id = capture>
+      <h1>Capture and Share <br> the World's Moments</h1>
+
+      <p>Instagram is a <b>fast, beautiful and fun</b> way to share your life with friends and family.
+      <br><br>
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <br><br>
+      Oh yeah, did we mention it's free? </p>
+
+        <img id = "app-store" src = "images/badge-iphone.png" alt = "Iphone Badge">
+        <img id = "google-play" src = "images/badge-android.png" alt = "Andoid Badge">
+</div>
+</div>
+
+
+</div>
+
+</div>
+
+<div id = "footer">
+<footer>
+  About Us
+  Support
+  Blog
+  Press
+  API
+  Jobs
+  Privacy
+  Terms
+  <div id ="copyright">
+  &copy; 2014 Instagram
+  </div>
+</footer>
+
+
+</body>
 </html>
