--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
       <div>
         <header>
          <img src="/images/brand.png" title="Instagram logo">
-         <div id="log-in"><img src="/images/home.png" title="Home Icon"><a href="#">Log in</a></div>
-         
+         <button id="log-in">
+          <img src="/images/home.png" title="Home Icon">
+          <a href="#">Log in</a>
+         </button>
        </header>
+       
       <article>
         <h2>Capture and Share<br/> the World's Moments</h2>
         <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p><p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
