--- a/index.html
+++ b/index.html
@@ -4,13 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+    <section class="body">
+          <div class="iphone">
+    <img src="images/phones.png" alt="Iphone image">
+    </div>
+    <div class="box">
+    <div class="loghome">
+      <img src="images/brand.png" alt="Instagram Logo" href="#"> 
+      <a class="log-in" href="#">Log in</a> <img src="images/home.png" class="home" alt="Log in">
+    </div>
+<div class=text>
+     <h1>Capture and Share the World's Moments</h1>
+    <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with
+    friends and family. </p>
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    </p>
+    <p>
+    Oh yeah, did we mention it's free?
+    </p>
+    </div>
+    <div>
+    <img src="images/badge-iphone.png" class="btn-1">
+    <img src="images/badge-android.png" class="btn-1">   
+    </div>
+    </div>
+    </section>
+    
+ <div class="footer">
+      <a class="btn-bottom" href="#">About Us </a>
+      <a class="btn-bottom" href="#">Support</a>
+      <a class="btn-bottom" href="#">Blog</a> 
+      <a class="btn-bottom" href="#">Press</a> 
+      <a class="btn-bottom" href="#">API</a>
+      <a class="btn-bottom" href="#">Jobs</a>
+      <a class="btn-bottom" href="#">Privacy</a>
+      <a class="btn-bottom" href="#">Terms</a>
+       &copy; 2014 Instagram
+ </div>
   </body>
 </html>
