--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Instagram Clone</title>
     <link rel="stylesheet" href="./styles/style.css">
   </head>
-  <body class="bg bg-color">
+  <body id="bg" class="bg" >
 
 <section class="fix">
  <div>
@@ -37,8 +37,8 @@
     <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
     <p>Oh yeah, did we mention it's free?</p>
     <div class="market-logos">
-      <img src="./images/badge-iphone.png" alt="iOs store logo">
-      <img src="./images/badge-android.png" alt="android store logo">
+      <a href="#"><img src="./images/badge-iphone.png" alt="iOs store logo"></a>
+      <a href="#"><img src="./images/badge-android.png" alt="android store logo"></a>
     </div>
   </article>
 
