--- a/index.html
+++ b/index.html
@@ -1,16 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+  
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="style.css">
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+   <div class = column1><img class= "iphones" img src=".\images\phones.png" alt= "Foto Teléfonos"></section>
+   </div>
+
+   <div class = "column2">
+    <div class = "instagram-login">
+      <img class= "instagram" img src=".\images\brand.png" alt= "Logo Instagram">
+      <button class="log-in"><img src=".\images\home.png" alt= "Log In"> Log in</button>
+    </div>
+
+    <div class="text">
+      <h1>Capture and Share <br>the World's Moments</h1> 
+      <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with
+    friends and family.</p> 
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+      &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
+    
+    </div>
+
+    <div class = "download">
+      <button><img src=".\images\badge-iphone.png" alt= "Apple Store"></button>
+      <button><img src=".\images\badge-android.png" alt= "Google Play"></button>
+    </div>
+
+  <!-- </div>  -->
   </body>
+
+  <div class="footer">
+      <ul>
+        <li><a href = "" >About us</a></li>
+        <li><a href = "" >Support</a></li>
+        <li><a href = "" >Blog</a></li>
+        <li><a href = "" >Press</a></li>
+        <li><a href = "" >API</a></li>
+        <li><a href = "" >Jobs</a></li>
+        <li><a href = "" >Privacy</a></li>
+        <li><a href = "" >Terms</a></li>
+      </ul>    
+       &copy; 2014 Instagram
+  </div> 
+   
 </html>
