--- a/index.html
+++ b/index.html
@@ -1,16 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Instagram Clone</title>
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+
+        <link rel="stylesheet" href="css/style.min.css">
+    </head>
+
+    <body>
+        <span class="background gradient"></span>
+
+        <div class="container">
+            <div class="phones">
+                <img src="/images/phones.png" alt="Phones">
+            </div>
+
+            <div class="content">
+                <header>
+                    <img src="/images/brand.png" alt="Logo Instagram" class="logo">
+
+                    <button class="btn gradient">
+                        <img src="/images/home.png" alt="Icon home">
+                        Log in
+                    </button>
+                </header>
+
+                <div class="box">
+                    <h1>Capture and Share the World's Moments</h1>
+
+                    <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way
+                        to share your life
+                        with
+                        friends and family.</p>
+
+                    <p>Take a picture or video, choose a filter to transform its look and feel, then post to
+                        Instagram &mdash; it's that easy.
+                        You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+                    </p>
+
+                    <p>Oh yeah, did we mention it's free?</p>
+
+                    <div class="btn-container">
+                        <a href="#" target="_blank" rel="noopener noreferrer"><img src="/images/badge-iphone.png"
+                                alt="Download App Store"></a>
+                        <a href="#" target="_blank" rel="noopener noreferrer"><img src="/images/badge-android.png"
+                                alt="Download Play Store"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <footer>
+            <a href="#">About Us</a>
+            <a href="#">Support</a>
+            <a href="#">Blog</a>
+            <a href="#">Press</a>
+            <a href="#">API</a>
+            <a href="#">Jobs</a>
+            <a href="#">Privacy</a>
+            <a href="#">Terms</a>
+            <p>
+                &copy; 2014 Instagram
+            </p>
+        </footer>
+    </body>
 </html>
