--- a/index.html
+++ b/index.html
@@ -1,16 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="styles/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+</head>
+
+<body class="">
+    <div id="main" class="center border ">
+        <div class="center t-div">
+            <div class="border center l-div">
+                <img src="images/phones.png" alt="">
+            </div>
+            <div class="border center r-div">
+                <div class="border w100" style="height:15%; text-align: left; padding: 25px;">
+                    <img src="images/brand.png" alt="">
+                </div>
+                <div class="border w100 description" style="height:65%; padding: 35px; text-align: left;">
+                    <h1 style="color:#072e56; padding-right: 40%;">
+                        Capture and Share the World's Moments
+                    </h1>
+                    <p>
+                        Instagram is <strong>fast, beautiful</strong> and <strong>fun</strong> wayto hsare your life with friends and family.
+                    </p>
+                    <p>
+                        Take a picture or video, choose afilter to transform its look and feel, then postto Instagram -- it's that easy. You can even share to Facebook, Twitter, Tumblr and more.It's a new way to see the world.
+                    </p>
+                    <p>Oh yeah, did we mention it's free?</p>
+                </div>
+                <div class="border w100" style="height:20%; padding-left: 35px; text-align: left;">
+                    <img src="images/badge-iphone.png" alt="">
+                    <img src="images/badge-android.png" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="center b-div border">
+            <ul id="nav">
+                <li>ABOUT US</li>
+                <li>SUPPORT</li>
+                <li>BLOG</li>
+                <li>PRESS</li>
+                <li>API</li>
+                <li>JOBS</li>
+                <li>PRIVACY</li>
+                <li>TERMS</li>
+                <li style="font-weight: 100!important;color: #808080d4;">© 2014 INSTAGRAM</li>
+            </ul>
+        </div>
+    </div>
+</body>
+
 </html>
