--- a/index.html
+++ b/index.html
@@ -1,16 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
-</html>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="styles/style.css" />
+</head>
+
+<body>
+  <div class="blueBackground"></div>
+  <div class="instaFullLayout">
+    <img src="images/phones.png" alt=" a photo of two iPhones" />
+
+    <div class="instaRightBox">
+      <div class="logoAndLogin">
+        <img class="instaLogo" src="images/brand.png" alt="the Instagram logo" />
+        <button onclick="#" class="logInIconButton">
+          <img class="logInIcon" src="images/home.png" alt="search" /> Log in
+        </button>
+      </div>
+
+      <article class="article">
+        <h1>
+          Capture and Share <br />
+          the World's Moments
+        </h1>
+
+        Instagram is a fast, beautiful and fun way to share your life with
+        friends and family.
+        <br /><br />
+        Take a picture or video, choose a filter to transform its look and
+        feel, then post to Instagram &mdash; it's that easy. You can even
+        share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+        world.
+        <br /><br />
+        Oh yeah, did we mention it's free?
+        <br /><br />
+        <a href="#"><img class="downloadIconIphone" src="images/badge-iphone.png" alt="Download on the App Store" /></a>
+        <a href="#"><img class="downloadIconAndriod" src="images/badge-android.png" alt="Get it on Google Play" /></a>
+      </article>
+    </div>
+  </div>
+  <footer class="footer">
+    <div class="inner-footer">
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </div>
+  </footer>
+
+</body>
+
+</html> 
