--- a/index.html
+++ b/index.html
@@ -4,13 +4,52 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <header>
+      <nav>
+        <div class="phones"> 
+          <img src="../images/phones.png" />
+        </div>
+      <div class="metaWrapper">
+        <div class="wrapper">
+          <img src="../images/brand.png" />
+          <button type="button"><img src="../images/home.png" /> <p>Log in</p></button>
+        </div>
+        <div id="infoBox"> 
+          <article>
+            <h1>Instagram Capture and Share the World's Moments</h1>
+            <p>Instagram is a fast,
+              beautiful and fun way to share your life with friends and family.</p> <p>Take a
+                picture or video, choose a filter to transform its look and feel, then post
+                to Instagram &mdash; it's that easy. You can even share to Facebook,
+                Twitter, Tumblr and more. It's a new way to see the world.</p> <p>Oh yeah, did we
+                mention it's free?</p>
+          </article>
+          <div class="download"> 
+            <img src="../images/badge-iphone.png">
+            <img src="../images/badge-android.png">
+          </div>
+        </div>
+      </div>
+      </nav>
+    </header>
+      
+
+      <footer> 
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+          <li id="copyright"> &copy; 2014 Instagram</li>
+        </ul>
+      </footer>     
   </body>
 </html>
