pictures links changed (they didn't show when opening the html)

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <header>
       <nav>
         <div class="phones"> 
-          <img src="../images/phones.png" />
+          <img src="images/phones.png" />
         </div>
       <div class="metaWrapper">
         <div class="wrapper">
-          <img src="../images/brand.png" />
-          <button type="button"><img src="../images/home.png" /> <p>Log in</p></button>
+          <img src="images/brand.png" />
+          <button type="button"><img src="images/home.png" /> <p>Log in</p></button>
         </div>
         <div id="infoBox"> 
           <article>
@@ -29,8 +29,8 @@
                 mention it's free?</p>
           </article>
           <div class="download"> 
-            <img src="../images/badge-iphone.png">
-            <img src="../images/badge-android.png">
+            <img src="images/badge-iphone.png">
+            <img src="images/badge-android.png">
           </div>
         </div>
       </div>
