--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
       <img class="phone" src="images/phones.png" alt="phones">
 
     <div class="section">
-      <div class="insta-log-in">
-        <img src="images/brand.png" alt="brand">
+      <div class="insta-log-in" class="margin">
+        <img  src="images/brand.png" alt="brand">
         <button><img src="images/home.png" alt="home">
         <p>Log in</p></button>
       </div>
-      <div class="box">
+      <div class="box" class="margin">
       <div >
         <h1>Capture and Share<br>the World's Moments Instagram</h1>
         <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with
@@ -31,7 +31,7 @@
             <P>Oh yeah, did we mention it's free?</P>
       </div>
     </div>
-      <div>
+      <div class="margin">
         <img src="images/badge-iphone.png" alt="badge-iphone">
         <img src="images/badge-android.png" alt="badge-android">      
       </div>
