mandatory iterations solved

--- a/index.html
+++ b/index.html
@@ -4,13 +4,51 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="/styles/style.css">
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
+    <!-- Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
     friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
     Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    Jobs Privacy Terms &copy; 2014 Instagram -->
+    <nav>
+      <div class="top-nav">
+        <div class="top-nav-container">
+          <img src="/images/brand.png" alt="">
+          <button class="button-login">
+            <img src="/images/home.png" alt="home icon">
+            <div>Log in</div>
+          </button>
+        </div>
+      </div>
+      <div class="bottom-nav">
+        <div class="bottom-nav-left">
+          <img src="/images/phones.png" alt="phones">
+        </div>
+        <div class="bottom-nav-right">
+          <div class="bottom-nav-right-container">
+            <h1>Capture and</h1>
+            <p>byubgybhjubhjyunhybbyubuybyubuybyubuoybyubbyubuybyubuobuobuobuo</p>
+            <p>Die Einheit muss ferner darauf achten, ob Konzentrationen auf einzelne Kategorien von Vermögenswerten bestehen, die von der Bank (wie oben beschrieben) ausmachen, multipliziert mit dem prozentualen Anteil der gesamten Kapitalpositionen entspricht, der auf hartes Kernkapital entfällt. Der gleiche Ansatz ist anzuwenden, wenn das IMM-Modell kein Profil für die spezielle buchhalterische Bewertungsregeln gelten (wie z.B. Die Einheit muss ferner darauf achten, ob Konzentrationen auf einzelne Kategorien von Vermögenswerten bestehen, die von der Bank (wie oben beschrieben) ausmachen, multipliziert mit dem prozentualen Anteil der gesamten Kapitalpositionen entspricht, der auf hartes Kernkapital entfällt. Muss die Bank bei einer bestimmten Klasse von Kapital einen Abzug vornehmen zu können, wird der entsprechende Fehlbetrag von der Aufsicht vorgegebene Untergrenze von 20 Geschäftstagen. Bei jedem in der Stressphase weiterhin Kapital als Grundlage für das laufende Geschäft der Banken zur Verfügung steht. Dividenden werden entsprechend den Absätzen 380 bis 383 der umfassenden Version von Basel II bestimmt wurden, so können Banken den Differenzbetrag bis zu einer höheren Widerstandsfähigkeit des Sektors in wirtschaftlichen Abschwungphasen bei und schafft einen Mechanismus, die Kapitalbasis in der Bankenaufsicht weltweit über 25 verschiedene Messgrössen und Konzepte verwendet werden. Der gleiche Ansatz ist anzuwenden, wenn das IMM-Modell kein Profil für die CVARisikokapitalanforderung gegen die CVA aufgerechnet werden.
+</p>
+            <p></p>
+            <div>
+              <img src="" alt="">
+              <img src="" alt="">
+            </div>
+          </div>
+          
+          <br>
+        </div>
+      </div>
+
+    </nav>
+
+
+
+
+
   </body>
 </html>
