--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="/styles/style.css" />
   </head>
 
 
   <body>
-    <div class="container-arriba">
+    <div class="container-top">
       <div class="container clearfix">
         <div class="panel">
           <div class="mobile">
@@ -48,7 +49,7 @@
         </div>
       </div>
     </div>
-    <div class="container-abajo"></div>
+    <div class="container-bottom"></div>
   </body>
   
 </html>
