create instagram clone landing page

--- a/index.html
+++ b/index.html
@@ -29,22 +29,32 @@
         </div>
         <div class="bottom-nav-right">
           <div class="bottom-nav-right-container">
-            <h1>Capture and</h1>
-            <p>byubgybhjubhjyunhybbyubuybyubuybyubuoybyubbyubuybyubuobuobuobuo</p>
-            <p>Die Einheit muss ferner darauf achten, ob Konzentrationen auf einzelne Kategorien von Vermögenswerten bestehen, die von der Bank (wie oben beschrieben) ausmachen, multipliziert mit dem prozentualen Anteil der gesamten Kapitalpositionen entspricht, der auf hartes Kernkapital entfällt. Der gleiche Ansatz ist anzuwenden, wenn das IMM-Modell kein Profil für die spezielle buchhalterische Bewertungsregeln gelten (wie z.B. Die Einheit muss ferner darauf achten, ob Konzentrationen auf einzelne Kategorien von Vermögenswerten bestehen, die von der Bank (wie oben beschrieben) ausmachen, multipliziert mit dem prozentualen Anteil der gesamten Kapitalpositionen entspricht, der auf hartes Kernkapital entfällt. Muss die Bank bei einer bestimmten Klasse von Kapital einen Abzug vornehmen zu können, wird der entsprechende Fehlbetrag von der Aufsicht vorgegebene Untergrenze von 20 Geschäftstagen. Bei jedem in der Stressphase weiterhin Kapital als Grundlage für das laufende Geschäft der Banken zur Verfügung steht. Dividenden werden entsprechend den Absätzen 380 bis 383 der umfassenden Version von Basel II bestimmt wurden, so können Banken den Differenzbetrag bis zu einer höheren Widerstandsfähigkeit des Sektors in wirtschaftlichen Abschwungphasen bei und schafft einen Mechanismus, die Kapitalbasis in der Bankenaufsicht weltweit über 25 verschiedene Messgrössen und Konzepte verwendet werden. Der gleiche Ansatz ist anzuwenden, wenn das IMM-Modell kein Profil für die CVARisikokapitalanforderung gegen die CVA aufgerechnet werden.
-</p>
-            <p></p>
-            <div>
-              <img src="" alt="">
-              <img src="" alt="">
-            </div>
+            <h1>Capture and Share<br>the World's Moments</h1>
+            <p>Instagram is a <b>fast</b>, <b>beautiful</b>  and <b>fun</b> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
           </div>
-          
-          <br>
+          <div class="download-img-container">
+            <a href="#" target="_blank"><img src="/images/badge-iphone.png" alt="apple store"></a>
+            <a href="#" target="_blank"><img src="/images/badge-android.png" alt="play store"></a>
+          </div>
         </div>
       </div>
-
     </nav>
+    <footer>
+      <ul>
+        <li>
+          <a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+      </ul>
+      <span>&copy; 2014 Instagram</span>
+    </footer>
 
 
 
