--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    <!-- Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram -->
+
     <nav>
       <div class="top-nav">
         <div class="top-nav-container">
@@ -43,8 +39,7 @@
     </nav>
     <footer>
       <ul>
-        <li>
-          <a href="#">About Us</a></li>
+        <li><a href="#">About Us</a></li>
         <li><a href="#">Support</a></li>
         <li><a href="#">Blog</a></li>
         <li><a href="#">Press</a></li>
