--- a/index.html
+++ b/index.html
@@ -4,13 +4,60 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
+  <header>
+    <div id="blue_bkg"></div>
+  </header>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+  
+  <div id="flex-container"> 
+   <div id="phones-container"> <!-- START PHONES CONTAINER-->
+    <div class="phones">
+      <img src="./images/phones.png" alt="iphone_preview" />
+    </div>
+  </div>                        <!-- END PHONES CONTAINER-->
+
+  <div id="logo-and-text-container"> <!-- START logos and text CONTAINER-->
+    <div class="logo-and-button">
+    <div class="insta-logo">
+      <img src="./images/brand.png" />
+    </div>
+    <div class="home-button">
+      <button id="login-button">
+      <img id="home-icon" src="./images/home.png" alt="home" />Log in</button>
+    </div>
+  </div>
+
+  <section id="text">
+    <h1 id="title">Capture and Share <br> the World's Moments</h1>
+      <p id="main-text">Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family. 
+        <br><br>
+    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <br><br>
+    Oh yeah, did we mention it's free?</p>
+    <div id="app-store-buttons">
+      <img id="iphone-button" src="./images/badge-iphone.png" alt="AppStore-button" />
+      <img id="android-button"  src="./images/badge-android.png" alt="GoogleStore-button">
+    </div>
+  </section>
+</div>                    <!-- End logos and text CONTAINER-->
+</div>
+
+<footer>
+  <ul id="flex-footer">
+    <li>ABOUT US</li>
+    <li>SUPPORT</li>
+    <li>BLOG</li>
+    <li>PRESS</li>
+    <li>API</li>
+    <li>JOBS</li>
+    <li>PRIVACY</li>
+    <li>TERMS</li>
+    <li id="grey-copyright">&copy; 2014 Instagram</li>
+  </ul>
+</footer>
+
   </body>
 </html>
