--- a/index.html
+++ b/index.html
@@ -8,22 +8,40 @@
     <link rel="stylesheet" href="/styles/normalyze.css" />
   </head>
   <body>
-    <div class="background">
+    <header class="background">
+    </header>
+    <div class="container">
       <div>
-        <img src="/images/phones.png" alt="Picture of phones">
+        <img src="/images/phones.png" alt="picture of phones" />
       </div>
-      <div class="container">
-        <h1>Capture and Share the World's Moments</h1>
+      <div>
+        <div class="container-button">
+          <img src="/images/brand.png" alt="instagram-logo" />
+          <button>
+            <img src="/images/home.png" alt="house-logo" />
+            <p class="text-button">Log in</p>
+          </button>
+        </div>
+        <div class="container-text">
+        <h1>Capture and Share <br /> the World's Moments</h1>
         <p class="text">Instagram is a fast, beautiful and fun way to share your life with
-          friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          friends and family.
+          <br />
+          <br />
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
           &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
           Oh yeah, did we mention it's free?</p>
-      </div>
+        </div>
+        <div class="img-apple-android">
+          <img src="/images/badge-iphone.png" alt="img app store" />
+          <img src="/images/badge-android.png" alt="img google play">
+        </div>
+      </div>  
   </div>
   <footer>
     <div> 
-      <p>About Us Support Blog Press API
-        Jobs Privacy Terms &copy; 2014 Instagram</p>
+      About Us Support Blog Press API
+        Jobs Privacy Terms &copy; 2014 Instagram
     </div>
   </footer>
   </body>
