--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div class="gradient">
             <h1>Capture and Share the World's Moments</h1>
             <p>
-              Instagram is a fast, beautiful and fun way to share your life with
+              Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
               friends and family. 
             </p>
             <p>
@@ -41,8 +41,15 @@
         </div>
       </section>
       <section id="section-2" class="section-links">
-        About Us Support Blog Press API
-          Jobs Privacy Terms &copy; 2014 Instagram
+        <a href="#AboutUs">ABOUT US</a>
+        <a href="#Support">SUPPORT</a>
+        <a href="#Blog">BLOG</a>
+        <a href="#Press">PRESS</a>
+        <a href="#API">API</a>
+        <a href="#Jobs">JOBS</a>
+        <a href="#Privacy">PRIVACY</a>
+        <a href="#Terms">TERMS</a>
+        <span>© 2014 Instagram</span>
       </section>
     </div>
     
