--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
         </div>
         <div class="container-text">
         <h1>Capture and Share <br /> the World's Moments</h1>
-        <p class="text">Instagram is a fast, beautiful and fun way to share your life with
+        <p class="text">Instagram is a <span>fast, beautiful</span> and <span>fun</span> way to share your life with
           friends and family.
           <br />
           <br />
           Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
           &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <br />
+          <br />
           Oh yeah, did we mention it's free?</p>
         </div>
         <div class="img-apple-android">
@@ -39,9 +41,34 @@
       </div>  
   </div>
   <footer>
-    <div> 
-      About Us Support Blog Press API
-        Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="footer"> 
+      <ul>
+        <li>
+          <a href="">About Us</a>
+        </li>
+        <li>
+          <a href="">Support</a>
+        </li>
+        <li>
+          <a href="">Blog</a>
+        </li>
+        <li>
+          <a href="">Press</a>
+        </li>
+        <li>
+          <a href="">API</a>
+        </li>
+        <li>
+          <a href="">Jobs</a>
+        </li>
+        <li>
+          <a href="">Privacy</a>
+        </li>
+        <li>
+          <a href="">Terms</a>
+        </li>
+          &copy; 2014 Instagram
+      </ul>     
     </div>
   </footer>
   </body>
