--- a/index.html
+++ b/index.html
@@ -4,13 +4,60 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css"> 
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+    <!--section-one-->
+    
+    <section class="section-one">
+      <div class="iPhone" >
+        <img src="images/phones.png" alt = "iPhone">
+      </div>
+      <div class="instagram-logo">
+        <img src="images/brand.png" alt= "instagram-logo">
+      </div>
+      <div class="login-button">
+        <button class="button"><a href="https://www.instagram.com/accounts/login/">
+        <img  src="./images/home.png" alt="login-button-home-icon"> Log in </a>
+      </button>  
+      </div>
+    </section>
+
+    <!--section-two-->
+
+      <section class="section-two">
+        <div class="container-text">
+          <p><h1>Capture and Share <br/> the World's Moments</h1></p>
+          <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with
+            friends and family.</p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>
+            Oh yeah, did we mention it's free?</p>
+          </div>
+          <div class="apps">
+            <a href="https://apps.apple.com/es/app/instagram/id389801252"><img src="/images/badge-iphone.png"> </a>
+            <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=es&gl=US"><img src="/images/badge-android.png"></a>
+          </div>
+      </section>
+
+    <!--footer-->
+
+      <footer> 
+        <ul>
+          <li><a href="https://www.instagram.com/about/us/">ABOUT US</a></li>
+          <li><a href="https://help.instagram.com/">SUPPORT</a></li>
+          <li><a href="https://about.instagram.com/es-la/blog">BLOG</a></li>
+          <li><a href="https://about.instagram.com/blog/announcements">PRESS</a></li>
+          <li><a href="https://www.instagram.com/developer/">API</a></li>
+          <li><a href="https://about.instagram.com/about-us/careers">JOBS</a></li>
+          <li><a href="https://help.instagram.com/196883487377501">PRIVACY</a></li>
+          <li><a href="https://help.instagram.com/581066165581870">TERMS</a></li>
+          <li id="copyright"> &copy; 2014 INSTAGRAM</li>
+        </ul>
+      </footer>     
+    
   </body>
 </html>
