Creating the css classes

--- a/index.html
+++ b/index.html
@@ -5,12 +5,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel=StyleSheet href="./styles/style.css" type="text/css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+    <div class="container">
+      <div class="phones">
+        <img src="./images/phones.png"/>
+      </div>
+      <div>
+        <div class="iconsHeaderContainer">
+          <div>
+            <img src="./images/brand.png"/>
+          </div>
+          <div>
+            <button>
+              <img src="./images/home.png"/>
+              <strong>Log in</strong>
+            </button>
+          </div>
+        </div>
+        <div class="card">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>
+            Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with
+            friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            Oh yeah, did we mention it's free?
+          </p>
+          <div class="iconsContainer">
+            <div>
+              <img src="./images/badge-iphone.png"/>
+            </div>
+            <div>
+              <img src="./images/badge-android.png"/>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div> 
+    <div class="footerMenu">
+      <a href="...."><strong>ABOUT US</strong></a>
+      <a href="...."><strong>SUPPORT</strong></a>
+      <a href="...."><strong>BLOG</strong></a>
+      <a href="...."><strong>PRESS</strong></a>
+      <a href="...."><strong>API</strong></a>
+      <a href="...."><strong>JOBS</strong></a>
+      <a href="...."><strong>PRIVACY</strong></a>
+      <a href="...."><strong>TERMS</strong></a>
+      &#169<strong>INSTAGRAM</strong>
+    </div>   
+  </body> 
 </html>
