--- a/index.html
+++ b/index.html
@@ -4,13 +4,60 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+    <div class= "content">
+    <div class = "left">
+      <img src="images/phones.png" alt="phones.img"/>
+    </div>
+    <section class = "right">
+      <div class = "home">
+        <img class= "insta" src="images/brand.png" alt="instagram logo"/>
+        <a href="#">
+        <button class="log-in"> 
+          <img class="home-button" src="images/home.png" alt="home.img" />
+          Log in 
+        </button>
+         </a>
+        </div>
+    <div class ="description">
+        <article> 
+          <p >Capture and Share <br> the World's Moments </p>
+        <span> Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with
+    friends and family.
+      <br>
+    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <br>
+  
+    Oh yeah, did we mention it's free? </span>
+    </span>
+    <div class = "download"> 
+    <div class = "press">
+    <a href="#"><img src="images/badge-iphone.png" alt="ApStore" /></a>
+    </div>
+    <div class = "press">
+    <a href="#"><img src="images/badge-android.png" alt="Google play" /></a>
+    </div>
+   </div>
+    </article>
+    </div> 
+    </section>
+    </div>  
+ 
+    <footer>
+      <ul>
+        <li><a href="#">About us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li> &copy; 2014 Instagram</li>
+      </ul>    
+        </footer>
   </body>
 </html>
