Fix minor mistake in head tag

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preload" href="/styles/style.css" as="style" />
     <link rel="stylesheet" href="/styles/normalize.css" />
     <link rel="stylesheet" href="/styles/style.css" />
-    <link rel="shortcut  inco" href="/images/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
   </head>
   <body>
