Add new changes

--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
       </div>
     </div> 
     <div class="footerMenu">
-      <a href="...."><strong>ABOUT US</strong></a>
-      <a href="...."><strong>SUPPORT</strong></a>
-      <a href="...."><strong>BLOG</strong></a>
-      <a href="...."><strong>PRESS</strong></a>
-      <a href="...."><strong>API</strong></a>
-      <a href="...."><strong>JOBS</strong></a>
-      <a href="...."><strong>PRIVACY</strong></a>
-      <a href="...."><strong>TERMS</strong></a>
-      &#169<strong>INSTAGRAM</strong>
+      <div><a href="...."><strong>ABOUT US</strong></a></div>
+      <div><a href="...."><strong>SUPPORT</strong></a></div>
+      <div><a href="...."><strong>BLOG</strong></a></div>
+      <div><a href="...."><strong>PRESS</strong></a></div>
+      <div><a href="...."><strong>API</strong></a></div>
+      <div><a href="...."><strong>JOBS</strong></a></div>
+      <div><a href="...."><strong>PRIVACY</strong></a></div>
+      <div><a href="...."><strong>TERMS</strong></a></div>
+      <div>&#169<strong>INSTAGRAM</strong></div>
     </div>   
   </body> 
 </html>
