--- a/index.html
+++ b/index.html
@@ -5,12 +5,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <header class="header"></header>
+    <section class="main">
+      <section class="container">
+        <img src="images/phones.png" />
+        <section id="section-2">
+          <article id="title">
+            <img src="images/brand.png" />
+            <div id="button-login">
+              <img src="images/home.png" />
+              Log in
+            </div>
+          </article>
+
+          <article id="description">
+            <div class="text-description">
+              <h1>
+                Capture and Share <br />
+                the World's Moments
+              </h1>
+              <p>
+                Instagram is a <b>fast, beautiful </b>and <b>fun</b> way to
+                share your life with friends and family. <br />
+                <br />
+
+                Take a picture or video, choose a filter to transform its look
+                and feel, then post to Instagram &mdash; it's that easy. You can
+                even share to Facebook, Twitter, Tumblr and more. It's a new way
+                to see the world. <br />
+                <br />
+                Oh yeah, did we mention it's free?
+              </p>
+            </div>
+            <article id="container-buttons">
+              <img class="container-img" src="images/badge-iphone.png" />
+              <img class="container-img" src="images/badge-android.png" />
+            </article>
+          </article>
+        </section>
+      </section>
+      <footer>
+        <nav>
+          <ul>
+            <li><a href="">About Us</a></li>
+            <li><a href="">Support</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Press</a></li>
+            <li><a href="">API</a></li>
+            <li><a href="">Jobs</a></li>
+            <li><a href="">Privacy</a></li>
+            <li><a href="">Terms</a></li>
+            <li><a href="">@2014 Instagram</a></li>
+          </ul>
+        </nav>
+      </footer>
+    </section>
   </body>
 </html>
