--- a/index.html
+++ b/index.html
@@ -4,13 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="/styles/style.css"
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <header></header>
+    <section class="dosLog">
+      <img src="images/brand.png" alt="brandImage">
+      <img src="images/home.png" alt="homeImage">
+    </section>
+    <section class="ladoIzq">
+      <img src="images/phones.png" alt="image phones">
+    </section>
+    <section class="ladoDer">
+      <h1>Capture and Share the World's Moments</h1>
+      <p class="textoDescripcion">Instagram is a fast, beautiful and fun way to share your life with
+      friends and family.</p>
+      <p class="textoDescripcion">Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+      &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p class="textoDescripcion">Oh yeah, did we mention it's free?</p>
+      <div class="download">
+        <img src="images/badge-iphone.png" alt="badge-iphone">
+        <img src="images/badge-android.png" alt="badgeAndroid">
+      </div>
+    </section>
+    <section class="subMenu">
+      <footer>
+        <ul>
+          About - Us  - Support - Blog - Press - API -  Jobs -  Privacy - Terms - &copy;  2014 Instagram</li>
+        </ul>
+      </footer>
+    </section>
   </body>
 </html>
