--- a/index.html
+++ b/index.html
@@ -6,26 +6,37 @@
     <title>Instagram Clone</title>
     <link rel="stylesheet" href="./styles/style.css">
   </head>
+
   <body>
     <div class= "background-color1">
-    <div class="instagram-logo">
-    Instagram 
-  </div>
-    <p> Capture and Share the World's Moments </p>
-    <p> Instagram is a fast, beautiful and fun way to share your life with friends and family. 
-    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? </p>
-  </div>
-    Download on the App Store Get it on Google Play 
-    <footer>
-      About Us 
-      Support 
-      Blog 
-      Press 
-      API
-      Jobs Privacy Terms 
-      &copy; 2014 Instagram
-  </footer>
+      <div class="insta">
+        <img src="./images/brand.png" alt="Instagram">
+        <img src="./images/home.png" alt="home">
+      </div>
+      <div>
+        <img src="./images/phones.png" alt="phones">
+      </div>
+      <div class="container">
+        <img src="./images/frame.png" alt="frame">
+        <h2> Capture and Share the World's Moments </h2>
+        <p> Instagram is a fast, beautiful and fun way to share your life with friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. Oh yeah, did we mention it's free? </p>
+      </div>
+      <div class="download">
+        <img src="./images/badge-iphone.png" alt="iphone">
+        <img src="./images/badge-android.png" alt="android">
+        <p>Download on the App Store Get it on Google Play</p>
+      </div>
+      <footer>
+        <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li> 
+          <li>Press</li> 
+          <li>API</li>
+          <li>Jobs Privacy Terms</li> 
+          <li>&copy; 2014 Instagram</li>
+        </ul>
+      </footer>
+      </div>
   </body>
 </html>
