--- a/index.html
+++ b/index.html
@@ -1,16 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <!-- don't forget to link your styles -->
+  <link rel="stylesheet" href="/styles/style.css">
+</head>
+
+<body>
+  <div class="brand">
+    <!-- <img src="./images/brand.png"> -->
+  </div>
+  <div class="phones">
+    <img src="./images/phones.png">
+  </div>
+  <div class="insta">
+    
+  
+  </div>
+  <div class="container">
+  <h2>
+    Capture and Share the World's Moments
+  </h2>
+  <p>
+    Instagram is a fast, beautiful and fun way to share your life with
     friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+    Oh yeah, did we mention it's free?
+  </p>
+  
+  <div class="stores">
+    <img src="./images/badge-iphone.png" alt="iphone">
+    <img src="./images/badge-android.png" alt="android">
+  </div>
+  </div>
+  <div>
+  <footer class="footer">About Us Support Blog Press API Jobs Privacy Terms</footer>
+  <footer class="footer2"> &copy; 2014 Instagram</footer>
+  </div>
+  
+</body>
+
 </html>
