--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="container">
         <img src="./images/frame.png" alt="frame">
         <h2> Capture and Share the World's Moments </h2>
-        <p> Instagram is a fast, beautiful and fun way to share your life with friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. Oh yeah, did we mention it's free? </p>
+        Instagram is a fast, beautiful and fun way to share your life with friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. Oh yeah, did we mention it's free?
       </div>
       <div class="download">
         <img src="./images/badge-iphone.png" alt="iphone">
