--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     </header>
     <div class="container">
       <div>
-        <img src="/images/phones.png" alt="picture of phones" />
+        <img src="./images/phones.png" alt="picture of phones" />
       </div>
       <div>
         <div class="container-button">
-          <img src="/images/brand.png" alt="instagram-logo" />
+          <img src="./images/brand.png" alt="instagram-logo" />
           <button>
-            <img src="/images/home.png" alt="house-logo" />
+            <img src="./images/home.png" alt="house-logo" />
             <p class="text-button">Log in</p>
           </button>
         </div>
@@ -35,8 +35,8 @@
           Oh yeah, did we mention it's free?</p>
         </div>
         <div class="img-apple-android">
-          <img src="/images/badge-iphone.png" alt="img app store" />
-          <img src="/images/badge-android.png" alt="img google play">
+          <img src="./images/badge-iphone.png" alt="img app store" />
+          <img src="./images/badge-android.png" alt="img google play">
         </div>
       </div>  
   </div>
