--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           </div>
         </div>
         <div class="card">
-          <h1>Capture and Share the World's Moments</h1>
+          <h1>Capture and Share<br>the World's Moments</h1>
           <p>
             Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with
             friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
@@ -34,10 +34,10 @@
           </p>
           <div class="iconsContainer">
             <div>
-              <img src="./images/badge-iphone.png"/>
+              <a href=""><img src="./images/badge-iphone.png"/></a>
             </div>
             <div>
-              <img src="./images/badge-android.png"/>
+              <a href=""><img src="./images/badge-android.png"/></a>
             </div>
           </div>
         </div>
