contiene estructura html y css, faltan ajustes

--- a/index.html
+++ b/index.html
@@ -1,16 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
-</html>
+<link rel="stylesheet" href="styles\style.css">
+<header>
+    <img src="images/frame.png" alt="">
+
+</header>
+<main class="mainContainer">
+
+    <div class="phoneTitle">
+        <div style="width:20%">
+            <img src="images/phones.png" alt="">
+        </div>
+        <div style="margin: 50px; width: 80%;">
+            <div style="margin: 15px;">
+                <img src="images/brand.png" alt="">
+            </div>
+            <div class="textContainer">
+                <h1>Instagram Capture and Share the World's Moments</h1>
+                <p class="texto">
+                    Instagram is a fast, beautiful and fun way to share your life with friends and family.<br> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to
+                    Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+                    <br> Oh yeah, did we mention it's free?
+                </p>
+            </div>
+            <div style="text-align: center;">
+                <img src="images/badge-iphone.png" alt="">
+                <img src="images/badge-android.png" alt="">
+            </div>
+        </div>
+    </div>
+    <footer style="text-align: center;">
+        Download on the App Store Get it on Google Play About Us Support Blog Press API Jobs Privacy Terms &copy; 2014 Instagram
+    </footer>
+</main>
