--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
           <h1>Capture and Share <br>
             the World's Moments</h1>
           <p>Instagram  Instagram is a <strong> fast, beautiful </strong> and <strong> fun </strong>way to share your life with
-            friends and family. <br>
-            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram - it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. <br>
-            Oh yeah, did we mention it's free?</p>
+            friends and family. <br> </p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram - it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. <br></p>
+           <p>Oh yeah, did we mention it's free?</p>
         </article>
 
         <div id= "download">
