--- a/index.html
+++ b/index.html
@@ -4,13 +4,64 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
+<link rel="stylesheet" href="./styles/style.css">  
+</head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
+    <header id="background">
+    </header>
+
+    <section id="container">
+      <img class="left" src="./images/phones.png" alt="phones">
+
+      <div class = "top-container">
+        <img class= "insta" src="./images/brand.png" alt="instagram logo"/>
+        <button class="log-in"> 
+         <img class="home" src="images/home.png" alt="home.img"/>
+         <div>Log in</div>
+       </button>
+      </div>
+
+    
+      <div>
+      <div >
+        <h1>Capture and Share<br>the World's Moments Instagram</h1>
+        <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with
+          friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <P>Oh yeah, did we mention it's free?</P>
+      </div>
+    </div>
+      <div>
+        <img src="images/badge-iphone.png" alt="badge-iphone">
+        <img src="images/badge-android.png" alt="badge-android">      
+      </div>
+    </div>
+    </section>
+
+
+
+
+
+    <footer id="footer">
+      <ul class="footer">
+        <li>ABOUT US</li>
+        <li>SUPPORT</li>
+        <li>BLOG</li>
+        <li>PRESS</li>
+        <li>API</li>
+        <li>JOBS</li>
+        <li>PRIVACY</li>
+        <li>TERMS</li>
+        <li>C 2014 Instagram</li>
+      </ul>
+    </footer>
+
+
+    <h1>Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
     friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
     Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    Jobs Privacy Terms &copy; 2014 Instagram</h1>
   </body>
 </html>
